--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -272,7 +272,7 @@
 		height: 200px;
 	}
 	thead td {
-		padding: 10px 61px;
+		padding: 10px 51px;
 	}
 	.orderNow {
 		margin: 48px;
@@ -617,7 +617,7 @@
 		display: none;
 	}
 	thead td {
-		padding: 10px 41px;
+		padding: 10px 38px;
 	}
 	.coupon-submit {
 		width: 97%;
@@ -1337,13 +1337,16 @@
 		font-size: 18px;
 	}
 	.cart-input input {
-		height: 41px;
+		height: 32px;
 		font-size: 22px;
 		width: 52px;
 	}
+	.td1 {
+		display: none;
+	}
 	.cart-input button {
-    	height: 2.875rem;
-    	width: 3.4375rem;
+    	height: 1.875rem;
+    	width: 2.4375rem;
 	}
 	.apply-coupon input {
 		height: 3.5rem;
@@ -1359,7 +1362,7 @@
 		height: 311px;
 	}
 	.sub-total span,.__total,.edit-address {
-		font-size: 25px;
+		font-size: 20px;
 	}
 	.shipping-info {
     	line-height: 4.75rem;
@@ -1374,7 +1377,7 @@
 		font-size: 33px;
 	}
 	thead td {
-		padding: 10px 35px;
+		padding: 10px 33px;
 	}
 	.shipping_ {
 		width: 45%;
@@ -1402,6 +1405,12 @@
 		height: 3.5rem;
 		width: 9.6875rem;
 		font-size: 16px;
+	}
+	td.carted-items {
+		display: block;
+	}
+	.shipping-info {
+		line-height: 2.75rem;
 	}
 	
 }
@@ -1500,104 +1509,21 @@
 		margin-left: 46px;
 	}
 }
-/* @media screen and (max-width:605px) {
-	.hr {
-		width: 54%;
-		margin-left: 20px;
-	}
-	.__item {
-		width: 264px;
-	}
-	.container .sub-container2 .sc2 {
-		margin-left: 0px;
-	}
-	.headmenu .des1 {
-		font-size: 17px;
-	}
-	.company-title {
-		margin-top: 6px;
-    	margin-left: 7px;
-	}
-}
-@media screen and (max-width: 603px) {
-	.__item {
-		width: 260px;
-	}
-	.headmenu .des1 {
-		font-size: 16px;
-	}
-	.topnav.responsive .ordinary {
-		font-size: 17px;
-		padding: 15px 0px;
-	}
-}
-@media screen and (max-width: 595px) {
-	.__item {
-		width: 256px;
-	}
-}
-@media screen and (max-width: 587px) {
-	.__item {
-		width: 253px;
-	}
-}
-@media screen and (max-width: 581px) {
-	.__item {
-		width: 248px;
-	}
-	.company-title {
-		display: none;
-	}
-	.headmenu .des-logo .logos {
-		margin-left: 37px;
-	}
-}
-@media screen and (max-width: 571px) {
-	.__item {
-		width: 246px;
-	}
-}
-@media screen and (max-width: 567px) {
-	.__item {
-		width: 245px;
-	}
-}
-@media screen and (max-width: 542px) {
-	.__item {
-		width: 233px;
-	}
-}
-@media screen and (max-width: 541px) {
-	.__item {
-		width: 231px;
-	}
-	.__item .box2 {
-		height: 203px;
-	}
-	.bttn1 {
-		width: 47%;
-	}
-	.topnav.responsive .ordinary {
-		font-size: 17px;
-		padding: 20px 0px;
-	}
-	.headmenu .icons {
-		width: 54%;
-		padding: 25px 27px 22px 10px;
-	}
-	.company-title {
-		display: none;
-	}
-	.headmenu .des-logo .logos {
-		margin-left: 37px;
-	}
-	.centered {
-		font-size: 33px;
-	}
-} */
 @media screen and (max-width:630px){
 	.company-title {
 		display: none;
+	}
+	.summary-sub-cont {
+		width: 100%;
+	}
+	.shipping_ {
+		width: 100%;
+	}
+	.orderNow {
+		margin: 3px;
+	}
+	.sort-items select {
+		width: 172px;
 	}
 }
 @media screen and (max-width:564px){
@@ -1614,6 +1540,8 @@
 	}
 	.cart-input input {
 		height: 32px;
+		font-size: 15px;
+		width: 44px;
 	}
 	.summary-conts {
 		width: 84%;
@@ -1660,8 +1588,8 @@
 	    font-size: 16px;
 	}
 	.__proceed-to {
-		height: 77px;
-		width: 264px;
+		height: 63px;
+		width: 226px;
 		margin: 60px 0;
 		font-size: 21px;
 	}
@@ -1704,6 +1632,9 @@
 	}
 	.sort-items select {
     	width: 169px;
+	}
+	.apply-coupon input {
+		width: 9.4375rem;
 	}
 }
 
@@ -2122,45 +2053,7 @@
 		margin: 29px;
 	}
 }
-@media screen and (max-width: 411px) {
-	.col-price {
-		width: 100%;
-		position: relative;
-		left: -49%;
-		top: -94%;
-	}
-	.prod-price {
-		position: relative;
-		left: 73%;
-		top: -76%;
-	}
-	#myDropdown a {
-    	font-size: 18px;
-	}
-	div#myDropdown {
-        line-height: 4px;
-    }
-	.dropdown-account {
-    	width: 30%;
-	}
-	.__item {
-		width: 166px;
-	}
-	.shop-items {
-		width: 184px;
-	}
-	.shop-company {
-		font-size: 29px;
-	}
-	.social-media-icons a img {
-		height: 24px;
-	}
-	.copyright {
-		font-size: 13px;
-		width: 36%;
-	}
 
-}
 @media screen and (max-width: 414px) {
 	/*special order*/
 	.cart-shop-button {
@@ -2216,11 +2109,8 @@
 		width: 38px;
 	    height: 43px;
 	}
-	.coupon-submit {
-	    width: 93%;
-	}
 	.apply-coupon input {
-		width: 9.4375rem;
+		width: 8.4375rem;
 		height: 3.125rem;
 		font-size: 18px;
 	}
@@ -2257,74 +2147,140 @@
 	}
 	/*end*/
 }
+@media screen and (max-width: 411px) {
+	.col-price {
+		width: 100%;
+		position: relative;
+		left: -49%;
+		top: -94%;
+	}
+	.prod-price {
+		position: relative;
+		left: 73%;
+		top: -76%;
+	}
+	#myDropdown a {
+    	font-size: 18px;
+	}
+	div#myDropdown {
+        line-height: 4px;
+    }
+	.dropdown-account {
+    	width: 30%;
+	}
+	.__item {
+		width: 163px;
+	}
+	.shop-items {
+		width: 172px;
+	}
+	.shop-company {
+		font-size: 23px;
+	}
+	.social-media-icons a img {
+		height: 24px;
+	}
+	.copyright {
+		font-size: 13px;
+		width: 36%;
+	}
+	.bttn2 {
+		font-size: 14px;
+	}
+	.bttn1 {
+		font-size: 14px;
+	}
+	.__item .box2 {
+		height: 105px;
+	}
+	.sort-items select {
+		width: 129px;
+	}
+	.topnav.responsive .ordinary {
+		font-size: 15px;
+	}
+	.td2 {
+		display: none;
+	}
+}
 @media screen and (max-width: 375px) {
 	/*cart*/
 	.page-sub-container h1 {
-		font-size: 59px;
+		font-size: 35px;
+	}
+	.shop-img img {
+		height: 12.25rem;
 	}
 	.product-on-cart {
 	    width: 93%;
 	}
 	.product-on-cart td {
-	    font-size: 37px;
+		font-size: 16px;
+	}
+	.des-logo img {
+		width: 120px;
+	}
+	.headmenu .icons {
+		padding: 25px 1px 22px 10px;
+	}
+	.shop-sorting {
+		font-size: 13px;
+		margin: 0 10px;
 	}
 	span.cancel-cart {
-	    font-size: 47px;
+	    font-size: 18px;
 	}
 	.librebais img {
-	    width: 358px;
+		width: 78px;
 	}
 	.librebais a {
-	    font-size: 40px;
+		font-size: 18px;
 	}
 	.cart-input input {
-	    font-size: 36px;
-	    width: 83px;
-	    height: 54px;
+		font-size: 18px;
+		width: 46px;
+		height: 38px;
 	}
 	.coupon-submit {
-	    width: 93%;
+		width: 93%;
+		display: flow-root;
 	}
 	.apply-coupon input {
-	    width: 27.4375rem;
-	    height: 80px;
-	    font-size: 37px;
+		width: 100%;
+		height: 72px;
+		font-size: 18px;
+	}
+	.apply-coupon {
+		margin-bottom: 17px;
 	}
 	.apply-coupon button, .update-cart button {
-	    font-size: 35px;
-	    height: 5.5rem;
-    	width: 18.6875rem;
+		font-size: 18px;
+		height: 4.5rem;
+		width: 100%;
 	}
 	.summary-conts {
 	    width: 93%;
 	}
 	.summary-sub-cont {
-	    font-size: 42px;
+		font-size: 18px;
 	}
 	.sub-total span {
-	    font-size: 39px;
+		font-size: 18px;
 	}
 	.shipping_ {
-	    font-size: 39px;
-	}
-	.shipping-info {
-	    line-height: 2.75rem;
-	    margin-left: 177px;
-	    width: 423px;
+		font-size: 18px;
 	}
 	.summary-total {
-	    font-size: 47px;
+		font-size: 18px;
 	}
-	.__total {
-		font-size: 39px;
-	}
+	
 	.__proceed-to {
-	    font-size: 37px;
-	    height: 89px;
-    	width: 386px;
+		font-size: 18px;
+		height: 72px;
+		width: 236px;
 	}
 	.edit-address {
-	    font-size: 35px;
+		font-size: 18px;
 	}
 	.cart-shop-button {
 	    position: relative;
@@ -2342,18 +2298,17 @@
     	font-size: 31px;
 	}
 	.f-icon img {
-		width: 199px;
+		width: 38px;
 	}
 	.f-icon strong {
-		font-size: 45px;
+		font-size: 18px;
 	}
 	.f-icon p {
-		/*font-size: 18px;*/
-	    font-size: 46px;
+		font-size: 18px;
 	}
 	.f-icon .buttoncat {
 		padding: 15px 32px;
-		font-size: 42px;
+		font-size: 16px;
 	}
 	.container .sub-container2 {
 	    height: auto;
@@ -2362,7 +2317,7 @@
 		width: 100%;
 	}
 	.__item {
-	    width: 619px;
+		width: 146px;
 	}
 	.items.slider.slick-initialized.slick-slider {
    		width: 100%;
@@ -2376,10 +2331,10 @@
 	    min-height: 30px;
 	}
 	span.product-name {
-	    font-size: 52px;
+		font-size: 18px;
 	}
 	.prices {
-	    font-size: 50px;
+		font-size: 18px;
 	}
 	.slider-conts {
     	height: 889px;
@@ -2405,12 +2360,9 @@
 	    margin-left: 0;
 	    margin-top: 0;
 	}
-	.des-logo img {
-	    width: 368px;
-	    margin-top: 75px;
-	}
+	
 	button.menu-toggle {
-	    font-size: 46px;
+		font-size: 20px;
 	    /*margin-top: 75px;	*/
 	}
 	.col-sm-4 {
@@ -2433,13 +2385,13 @@
 		margin-left: -64px;
 	}
 	.image-cont img {
-	    width: 321px;
+		width: 73px;
 	}
 	.info-contacts {
-	    font-size: 49px;
+		font-size: 16px;
 	}
 	span.sp {
-	    font-size: 44px;
+		font-size: 16px;
 	}
 	.col-price {
 		/*width: 22%;*/
@@ -2452,20 +2404,26 @@
 	}
 	.topnav {
 	    position: relative;
+	} 
+	span.footer-title {
+		font-size: 21px;
+	}
+	.social-media-link {
+		width: 19%;
 	}
 }
 @media screen and (max-width: 360px) {
 	.image-cont {
-		height: 687px;
+		height: 215px;
 		overflow: auto;
-	}
-	.container {
-		width: 1440px;
 	}
 	.headmenu {
 	    display: flex;
     	height: auto;
-       	padding: 61px 0;
+		padding: 22px 0;
+	}
+	span.account-c {
+		left: 16px;
 	}	
 	.headmenu .icons {
     	width: 100%;
@@ -2474,15 +2432,15 @@
 	    padding: 0;
 	    margin: 0;
 	}
-	.topnav a {
-		width: 323px;
+	.sales1 {
+		margin: 0;
 	}
 	.mobile-menu {
         width: 22%;
     	text-align: -webkit-center;
 	}
-	.des-logo img {
-    	width: 502px;
+	.shop-items {
+		width: 163px;
 	}
 	.headmenu .des1 {
     	font-size: 66px;
@@ -2491,10 +2449,6 @@
    		font-size: 46px;
     	width: 100%;
     	position: unset;
-	}
-	.headmenu .des-logo .logos {
-	    /*margin-left: 98px;*/
-	    margin-top: -30px;
 	}
 	.dropdown-content-account {
     	font-size: 43px;
@@ -2508,31 +2462,30 @@
     	display: none;
 	}
 	.topnav.responsive .ordinary {
-	    font-size: 47px;
+		font-size: 18px;
 	}
 	span.des-logo {
 	    width: 70%;
     	text-align: center;
 	}
 	button.menu-toggle {
-        width: 100%;
-        height: 6.6875rem;
-	    /*margin: 90px 0;*/
-	    font-size: 50px;
-        border-radius: 13px;
+		width: 100%;
+		height: 2.6875rem;
+		font-size: 20px;
+		border-radius: 7px;
 	}
 	.search-icon img {
-    	width: 5.9375rem;
-    	height: 5.9375rem;
+		width: 1.9375rem;
+		height: 1.9375rem;
 	}
 	.headmenu .icons .icons3 {
-	    width: 6.6875rem;
+		width: 2.6875rem;
 	}
 	.headmenu .icons .icons2 {
-	    width: 6.4375rem;
+		width: 2.4375rem;
 	}
 	.toggle-cart-sidenav img {
-	    display: none;
+		width: 3.4375rem;
 	}
 	.company-logo {
 	    width: 100%;
@@ -2562,7 +2515,7 @@
 		width: 100%;
 	}
 	.__item .box2 {
-	    height: 855px;
+		height: 249px;
 	    border-radius: 15px;
 	}
 	.__item .box2 img {
@@ -2578,31 +2531,31 @@
 		font-size: 47px;
 	}
 	.__item .box3 .box3-details .product-title {
-	    font-size: 65px;
+		font-size: 19px;
 	}
 	.__item .box3 .box3-info .box3-item-info {
-	    line-height: 84px;
-    	font-size: 61px;
+		line-height: 35px;
+		font-size: 18px;
 	}
 	.__item .box3 .box3-details .items-price {
 	    font-size: 88px;
 	}
 	.__item .box3 .box3-info .more {
-	    font-size: 72px;
+		font-size: 20px;
 	}
 	.bttn1 {
-		padding: 26px;
+		padding: 18px;
 	    width: 33%;
-	    font-size: 37px;
+		font-size: 14px;
 	}
 	.bttn2 {
 		margin-left: 15px;
-	    padding: 26px;
+	    padding: 18px;
 	    width: 40%;
-	    font-size: 37px;
+		font-size: 14px;
 	}
 	.f-icon strong {
-    	font-size: 70px;
+		font-size: 21px;
     	margin-left: -20px;
     	/*margin-left: 112px;*/
 	}
@@ -2623,11 +2576,10 @@
 		font-size: 19px;
 	}
 	.copyright {
-		font-size: 46px;
-		width: 52%;
+		font-size: 16px;
 	}
 	.container .sub-container2 .sc2 {
-		font-size: 88px;
+		font-size: 22px;
 	}
 	.hr {
 	    width: 75%;
@@ -2640,11 +2592,11 @@
 		margin: 54px 0px;
 	}
 	.quality-cont img {
-		height: 731px;
+		height: 203px;
     	object-fit: cover;
 	}
 	.centered {
-		font-size: 112px;
+		font-size: 28px;
 		width: 79%;
 	}
 	/*.page-wrapper {
@@ -2656,20 +2608,18 @@
     	padding-bottom: 87px;
 	}
 	.f-icon img {
-	    width: 310px;
-	    /*margin-left: 200px;*/
+		width: 48px;
 	}
 	.f-icon .buttoncat {
-	    padding: 39px 32px;
-	    font-size: 60px;
-	    width: 588px;
-	    height: 136px;
+		/* padding: 39px 32px; */
+		font-size: 14px;
+		width: 189px;
+		height: 49px;
 	}
 	.sub-container4 {
 	    width: 100%;
         height: auto;
         overflow: auto;
-        margin-top: 157px;
 	}
 	.slide-image {
         height: 1179px;
@@ -2678,30 +2628,31 @@
 	    height: 1145px;
 	}
 	.sales2 {
-	    font-size: 90px;
+		font-size: 25px;
 	}
 	.sales3 {
-	    font-size: 133px;
+		font-size: 31px;
 	}
 	.sales4 {
-	    font-size: 55px;
+		font-size: 18px;
 	}
 	.sales1 {
-	    width: 60%;
-	    top: 18%;
+		width: 100%;
+		top: 18%;
+		left: 0;
 	}
 	/*.item-name {
 		margin-top: -40px;
 	}*/
 	.prices {
-	    font-size: 67px;
+	    font-size: 21px;
 	}
 	.container .sub-container .bsp {
-		width: 51%;
-		font-size: 70px;
+		width: 100%;
+		font-size: 25px;
 	}
 	span.product-name {
-	    font-size: 80px;
+	    font-size: 19px;
     	font-weight: 700;
 	}
 	.slider-conts {
@@ -2739,8 +2690,8 @@
 	    width: 534px;
 	}
 	.qual-icon-cont p, .qual-icon-cont span {
-	    font-size: 50px;
-    	line-height: 95px;
+		font-size: 14px;
+		line-height: 26px;
 	}
 	span.footer-des-logo {
     	width: auto;
@@ -2754,7 +2705,6 @@
 	.footer-title-gallery {
     	width: 60%;
 	    height: auto;
-	    padding-bottom: 60px;
 	}
 	.footer-contact-us {
 		width: 100%;
@@ -2774,18 +2724,21 @@
 		padding: 72px 0;
 	}
 	.image-cont img {
-    	width: 321px;
+		width: 113px;
 	}
 	.gallery-images {
     	width: auto;
 	}
 	.info-contacts {
-	    font-size: 59px;
+		font-size: 14px;
 	}
 	span.sp {
 		width: 55%;
-		font-size: 48px;
-		line-height: 81px;
+		font-size: 14px;
+		line-height: 27px;
+	}
+	.footer-contact-info {
+		line-height: 22px;
 	}
 	span.des1 {
     	font-size: 63px;
@@ -2859,14 +2812,14 @@
 	    font-size: 63px!important;
 	}
 	#Btop {
-		width: 164px;
-    	height: 126px;
+		width: 55px;
+		height: 55px;
 	}
 	#Btop img {
 	    height: 121px;
 	}
 	.dropdown-account {
-        width: 20%;
+		width: 31%;
 	}
 	.social-icons {
 		width: 86%;
@@ -2879,8 +2832,7 @@
 	    padding: 0px 25px;
 	}
 	.social-media-icons a img {
-	    height: 84px;
-	    width: 84px;
+		height: 24px;
 	}
 	.topnav {
 		position: relative;
@@ -2906,17 +2858,24 @@
 		width: 100%;
 	}
 	.filter-cat {
-		font-size: 43px;
-		line-height: 114px;
+		font-size: 18px;
+		line-height: 43px;
 	}
 	.filter-cat {
 		overflow: auto;
-		height: 1309px;
+		height: 664px;
+	}
+	.showing {
+		width: 20.4375rem;
 	}
 	.shop-images-lechon img {
 		height: 100%;
 		width: 100%;
 	}
+	span.footer-title {
+		font-size: 21px;
+	}
+	
 }
 @media screen and (max-width: 320px) {
 	/*special order*/
