--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -18,6 +18,10 @@ img {
 .text-muted {
     font-weight: 300;
 }
+hr.hr-pr {
+    position: relative;
+    right: 13em;
+}
 
 .prof {
     position: relative;
