--- a/public/css/style.css
+++ b/public/css/style.css
@@ -266,7 +266,6 @@ span.inputs {
 
 .container .sub-container .box img {
     width: 100%;
-    /*height: 176px;*/
 }
 .box.slide{
     display: flex;
@@ -1098,7 +1097,7 @@ button.btn.btn-success.btn-block {
     outline: none;
 }
 button.filter-by-price {
-    padding: 10px 25px;
+    padding: 16px 35px;
     background: none;
     border-color: #c4a256;
     border: solid #c4a256;
@@ -1417,4 +1416,7 @@ input.btn.btn-default:hover{
   }
 .carted-item-name {
     align-self: center;
+  }
+  .filter-price {
+    line-height: 50px;
   }
