--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,16 @@ body {
   width: 100%;
   max-width: 1920px;
 }
+button.btn.btn-primary.moves-center-myorder {
+  background-color: #FF9800;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 input {
   font-size: 16px;
 }
