--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1429,5 +1429,13 @@ input.btn.btn-default:hover{
     position: absolute;
     border-radius: 50%;
   }
-  
+.delete-item {
+  cursor: pointer;
+  height: 25px;
+  width: 29px;
+  margin-top: 19px;
+}
+.close {
+  margin: 0px 0px 0px 8px;
+}
   
