--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -7,7 +7,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  font-size: 48px;
+  font-size: 60px;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   font-family: "Times New Roman", Times, serif;
@@ -16,6 +16,12 @@
   padding-bottom: 20px;
   padding-top: 20px;
   color: rgba(255, 255, 255, 0.8);
+}
+
+span.invalid-feedback {
+  position: relative;
+  top: -9em;
+  background-color: white;
 }
 
 .container {
@@ -65,6 +71,7 @@
   cursor: pointer;
   width: 210px;
   position: relative;
+  left: -6px;
 }
 
 .buttoncat:hover {
@@ -212,7 +219,7 @@ i.fa.fa-star {
 .shop-sub-container2 {
   /*border: solid;*/
   width: 281px;
-  line-height: 28px;
+  line-height: 42px;
 }
 
 .shop-sub-conts {
@@ -238,7 +245,7 @@ i.fa.fa-star {
 }
 
 .shop-sub-container3 {
-  width: 60%;
+  width: 53%;
   height: auto;
   padding: 31px 0;
 }
@@ -252,7 +259,7 @@ i.fa.fa-star {
   /*width: 85%;*/
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  /* justify-content: space-between; */
+  justify-content: space-between;
 }
 
 .shop-sorting {
@@ -280,7 +287,7 @@ i.fa.fa-star {
 }
 
 .shop-items {
-  padding: 11px 10px;
+  padding: 11px 0;
   position: relative;
 }
 
@@ -311,7 +318,7 @@ i.fa.fa-star {
 
 .shop-info-price {
   font-weight: normal;
-  font-size: 16px;
+  font-size: 21px;
   line-height: 1;
   letter-spacing: 0.01em;
   -webkit-box-align: center;
@@ -339,8 +346,7 @@ i.fa.fa-star {
 
 .shop-item-price {
   color: #c4a265;
-  width: 50%;
-  margin: 0 auto;
+  width: 100%;
   text-align: center;
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
@@ -497,7 +503,7 @@ span.close-btn {
 }
 
 button.addcart {
-  width: 100%;
+  width: 50%;
   height: 56px;
   color: #fff;
   background: #c4a256;
@@ -516,7 +522,211 @@ button.addcart {
   width: 100%;
 }
 
+@media screen and (max-width: 768px) {
+  span.close-btn {
+    display: block;
+  }
+  .shop-items {
+    width: 31%;
+  }
+  .shop-images-lechon img {
+    height: 100%;
+    width: 100%;
+  }
+  .shop-item-col {
+    width: 100%;
+  }
+  .shop-conts {
+    display: none;
+    border: solid #c4a256;
+  }
+  .showing {
+    display: block;
+    position: fixed;
+    background: #fff;
+    z-index: 100;
+    top: 0;
+    right: 0;
+    width: 29.4375rem;
+    -webkit-transition: 2s;
+    transition: 2s;
+  }
+  .shop-sub-container3 {
+    width: 100%;
+    padding: 31px 32px;
+  }
+  .shop-anchors {
+    width: auto;
+    font-weight: 700;
+    font-size: 26px;
+    padding: 10px 0;
+    padding: 30px 0;
+  }
+  .filter-btn {
+    display: block;
+    font-size: 26px;
+    font-weight: 700;
+  }
+  .shop-anchors-filter {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin: 2.5625rem 1.8rem;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    height: auto;
+  }
+  span.filter-show {
+    font-size: 26px;
+  }
+  button.filter-show-btn {
+    padding: 26px 56px;
+    background: #C4A265;
+    color: #fff;
+    border: 0;
+    border-radius: 5px;
+  }
+  .shop-sorting {
+    font-size: 25px;
+  }
+  .shop-sorting a {
+    color: #c4a26561;
+    font-size: 34px;
+  }
+  .sort-items select {
+    font-size: 33px;
+    border: unset;
+    width: 23.3125rem;
+  }
+  .shop-images img {
+    height: 18.5625rem;
+  }
+  .shop-info-price {
+    font-size: 30px;
+  }
+  .shop-item-name {
+    padding: 19px 0px;
+  }
+  .paginate {
+    font-size: 35px;
+  }
+  .filter-cat {
+    font-size: 29px;
+  }
+  .shop-sub-container2 {
+    position: absolute;
+    width: 100%;
+    /*background: #2a2c2f;*/
+  }
+  .sort-items select option {
+    font-size: 10px;
+  }
+  /*.shop-filters {
+      padding: 57px;
+      line-height: 73px;
+    }*/
+  .shop-filters {
+    width: unset;
+    padding: 57px;
+    line-height: 73px;
+    background: #fff;
+  }
+  .shop-filters .close-btn {
+    font-size: 69px;
+    float: right;
+  }
+  .title-header {
+    font-size: 26px;
+  }
+  .shop-cart-icon i {
+    margin: 106px 159px;
+    font-size: 48px;
+  }
+  .dropdown-content-account {
+    padding: 9px 16px;
+    z-index: 200;
+  }
+  .sort-items select option {
+    font-size: 10px;
+  }
+  .shop-filters {
+    padding: 57px;
+    line-height: 73px;
+  }
+  .shop-filters .close-btn {
+    font-size: 69px;
+    float: right;
+  }
+  .title-header {
+    font-size: 26px;
+  }
+  .shop-cart-icon i {
+    margin: 106px 159px;
+    font-size: 48px;
+  }
+  .dropdown-content-account {
+    padding: 9px 16px;
+    z-index: 200;
+  }
+}
 
+.signup-inputs {
+  width: 130%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #e2dbd424;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
+  right: 3rem;
+}
+
+input {
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #cf9d71;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+@media only screen and (max-width: 1024px) and (min-width: 768px) and (orientation: portrait) {
+  .login-reg-form {
+    width: 800px;
+    border: solid #cf9d71;
+    margin: 0% 37%;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+    position: relative;
+    right: 16%;
+  }
+  .signup-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: relative;
+    right: 6rem;
+  }
+  .social-log-reg {
+    width: 108%;
+    position: relative;
+  }
+  form.form-signup {
+    width: 157%;
+  }
+  .signup-inputs {
+    width: 113%;
+    position: relative;
+    left: -7rem;
+  }
+}
 
 @media only screen and (max-width: 1366px) and (min-width: 1024px) and (orientation: portrait) {
   .login-reg-form {
@@ -580,8 +790,8 @@ button.addcart {
     display: flex;
     width: 101%;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
   }
   .signup-inputs {
     width: 130%;
@@ -705,31 +915,5 @@ button.addcart {
     position: relative;
     right: 24px;
   }
-}
-
-.move-to-center-verify {
-  margin-left: 30rem;
-  margin-right: 30rem;
-  font-size: 23px;
-}
-
-.move-to.left-verify {
-  margin-left: 50rem;
-  margin-right: 50rem;
-  font-size: 27px;
-  color: #d40707;
-}
-
-button.btn.btn-link.p-0.m-0.align-baseline {
-  background-color: orange;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  position: relative;
-  left: 21rem;
 }
 /*# sourceMappingURL=bodystyle.css.map */
