--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -361,7 +361,7 @@ i.fa.fa-star {
   display: block;
 }
 
-.shop-cart-icon i {
+/* .shop-cart-icon i {
   position: absolute;
   top: 0;
   margin: 74px 113px;
@@ -375,7 +375,7 @@ i.fa.fa-star {
 .shop-cart-icon i:hover {
   color: #fff;
   background: #c4a265;
-}
+} */
 
 /*.shop-cart-icon i:hover*/
 .shop-item-image {
