--- a/public/sass/header.scss
+++ b/public/sass/header.scss
@@ -21,7 +21,7 @@
   .dropdown-content{
     display: none;
     position: absolute;
-    background-color: $color2;
+    background-color: white;
     /* min-width: 160px; */
     -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -76,3 +76,10 @@ text-decoration: none; // text decorations are clipped in WebKit browsers
     background-position: 0 100%;
   }
 }
+
+img.d-arrow.dar {
+  width: 10px;
+  position: relative;
+  right: 1em;
+}
+/*# sourceMappingURL=header.css.map */
