--- a/public/sass/bodystyle.scss
+++ b/public/sass/bodystyle.scss
@@ -259,7 +259,7 @@ i.fa.fa-star {
   /*width: 85%;*/
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
-  justify-content: space-between;
+  // justify-content: space-between;
 }
 
 .shop-sorting {
@@ -289,6 +289,7 @@ i.fa.fa-star {
 .shop-items {
   padding: 11px 0;
   position: relative;
+  margin: 0 16px;
 }
 
 .shop-filters {
