--- a/public/sass/header.css
+++ b/public/sass/header.css
@@ -21,7 +21,7 @@
   display: none;
   position: absolute;
   background-color: white;
-  /* min-width: 160px; */
+  min-width: 180px;
   -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
@@ -58,8 +58,8 @@
   text-decoration: none;
   display: block;
   overflow: hidden;
-  background: -webkit-gradient(linear, left top, right top, from(midnightblue), color-stop(50%, midnightblue), color-stop(50%, royalblue));
-  background: linear-gradient(to right, midnightblue, midnightblue 50%, royalblue 50%);
+  background: -webkit-gradient(linear, left top, right top, from(black), color-stop(50%, #f89f29), color-stop(50%, black));
+  background: linear-gradient(to right, black, #f89f29 50%, black 50%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
