--- a/public/sass/header.scss
+++ b/public/sass/header.scss
@@ -22,7 +22,7 @@
     display: none;
     position: absolute;
     background-color: white;
-    /* min-width: 160px; */
+    min-width: 180px;
     -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -63,7 +63,7 @@
   text-decoration: none;
   display: block;
   overflow: hidden;
-background: linear-gradient(to right, midnightblue, midnightblue 50%, royalblue 50%);
+background: linear-gradient(to right, rgb(0, 0, 0), rgb(248, 159, 41) 50%, rgb(0, 0, 0) 50%);
 background-clip: text;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
